# agent-sqllite

./: .env.example  .gitignore  README.md  data.txt  docker-compose.yml  pyproject.toml  requirements.txt  test_doc.txt  ui.py  vendor_dd.db
alembic/: env.py
alembic/versions/: 6cf4d8db879f_m2_document_chunks_and_progress_fields.py  8abba184ef10_m4_m5_agents_findings_and_control.py  943d567f7f9c_initial_schema_users_review_jobs_.py  e3bc179b5b19_initial_sqlite.py
app/: main.py
app/api/: auth.py  deps.py  documents.py  progress.py  reviews.py  search.py
app/core/: config.py  database.py  progress.py  security.py
app/models/: __init__.py  agent_run.py  chunk.py  document.py  finding.py  review_job.py  user.py
app/schemas/: auth.py  document.py  findings.py  progress.py  review.py  search.py
app/services/: agents.py  chunking.py  classification.py  embedding.py  extraction.py  file_validation.py  ingestion.py  orchestrator.py  retrieval.py
scripts/: smoke_test_m1.py  smoke_test_m2.py  smoke_test_m4_m5.py
