[project]
name = "vendor-dd-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.9",
    "openai>=1.30.0",
    "openpyxl>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "streamlit>=1.59.2",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
]
